Now, it is possible to send to PQ any optional compilation arguments (apart from java version, source files, and other previous args) for the compilation task.